# Elbrus-Optimization

./: LICENSE  Makefile  correlate.f90  rdf2bin.f90
correlation/: Makefile  correlate.F90
data/: Na-RDF-P1.tar.xz
division/: CMakeLists.txt  README.md  run.sh
division/scripts/: R.R
division/src/: main.f90  modules.f90  proc_intrinsic.c
