cmake_minimum_required(VERSION 3.10)

project(division)
enable_language(C Fortran)

set(SOURCES
src/proc_intrinsic.c
src/modules.f90
src/main.f90
)

# GNU SET
list(APPEND GNU_OPTS  "O0")
list(APPEND GNU_FLAGS "-O0")
list(APPEND GNU_OPTS  "O1")
list(APPEND GNU_FLAGS "-O1")
list(APPEND GNU_OPTS  "O2")
list(APPEND GNU_FLAGS "-O2")
list(APPEND GNU_OPTS  "O3")
list(APPEND GNU_FLAGS "-O3")
list(APPEND GNU_OPTS  "Ofast")
list(APPEND GNU_FLAGS "-Ofast")

# Intel SET
list(APPEND Intel_OPTS  "O0")
list(APPEND Intel_FLAGS "-O0")
list(APPEND Intel_OPTS  "O1")
list(APPEND Intel_FLAGS "-O1")
list(APPEND Intel_OPTS  "O2")
list(APPEND Intel_FLAGS "-O2")
list(APPEND Intel_OPTS  "O3")
list(APPEND Intel_FLAGS "-O3")
list(APPEND Intel_OPTS  "Ofast")
list(APPEND Intel_FLAGS "-Ofast")

# Flang SET
list(APPEND Flang_OPTS  "O0")
list(APPEND Flang_FLAGS "-O0")
list(APPEND Flang_OPTS  "O1")
list(APPEND Flang_FLAGS "-O1")
list(APPEND Flang_OPTS  "O2")
list(APPEND Flang_FLAGS "-O2")
list(APPEND Flang_OPTS  "O3")
list(APPEND Flang_FLAGS "-O3")
list(APPEND Flang_OPTS  "Ofast")
list(APPEND Flang_FLAGS "-Ofast")

# PGI SET
list(APPEND PGI_OPTS  "O0")
list(APPEND PGI_FLAGS "-O0")
list(APPEND PGI_OPTS  "O1")
list(APPEND PGI_FLAGS "-O1")
list(APPEND PGI_OPTS  "O2")
list(APPEND PGI_FLAGS "-O2")
list(APPEND PGI_OPTS  "O3")
list(APPEND PGI_FLAGS "-O3")
list(APPEND PGI_OPTS  "O4")
list(APPEND PGI_FLAGS "-O4")
list(APPEND PGI_OPTS  "Ofast")
list(APPEND PGI_FLAGS "-fast")

# Oracle Sun SET
list(APPEND SunPro_OPTS  "O0")
list(APPEND SunPro_FLAGS "-O0")
list(APPEND SunPro_OPTS  "O1")
list(APPEND SunPro_FLAGS "-O1")
list(APPEND SunPro_OPTS  "O2")
list(APPEND SunPro_FLAGS "-O2")
list(APPEND SunPro_OPTS  "O3")
list(APPEND SunPro_FLAGS "-O3")
list(APPEND SunPro_OPTS  "O4")
list(APPEND SunPro_FLAGS "-O4")
list(APPEND SunPro_OPTS  "O5")
list(APPEND SunPro_FLAGS "-O5")
list(APPEND SunPro_OPTS  "Ofast")
list(APPEND SunPro_FLAGS "-fast")

# IBM XL SET
list(APPEND XL_OPTS  "O0")
list(APPEND XL_FLAGS "-O0")
list(APPEND XL_OPTS  "O1")
list(APPEND XL_FLAGS "-O1")
list(APPEND XL_OPTS  "O2")
list(APPEND XL_FLAGS "-O2")
list(APPEND XL_OPTS  "O3")
list(APPEND XL_FLAGS "-O3")
list(APPEND XL_OPTS  "O4")
list(APPEND XL_FLAGS "-O4")
list(APPEND XL_OPTS  "O5")
list(APPEND XL_FLAGS "-O5")
list(APPEND XL_OPTS  "Ofast")
list(APPEND XL_FLAGS "-fast")

set(COMPILER ${CMAKE_Fortran_COMPILER_ID})
if(    "${COMPILER}" STREQUAL "GNU")
  set_source_files_properties(src/modules.f90 PROPERTIES COMPILE_FLAGS -ffree-line-length-none)
elseif("${COMPILER}" STREQUAL "Intel")
elseif("${COMPILER}" STREQUAL "Flang")
elseif("${COMPILER}" STREQUAL "PGI")
  set_source_files_properties(src/proc_intrinsic.c PROPERTIES COMPILE_FLAGS -Masmkeyword)
elseif("${COMPILER}" STREQUAL "SunPro")
elseif("${COMPILER}" STREQUAL "XL")
endif()

list(LENGTH ${COMPILER}_OPTS count)
math(EXPR count "${count}-1")
foreach(i RANGE ${count})
  list(GET ${COMPILER}_OPTS  ${i} OPT)
  list(GET ${COMPILER}_FLAGS ${i} FLAGS)
  add_executable        (${PROJECT_NAME}-${CMAKE_SYSTEM_PROCESSOR}-${COMPILER}-${OPT} ${SOURCES})
  target_compile_options(${PROJECT_NAME}-${CMAKE_SYSTEM_PROCESSOR}-${COMPILER}-${OPT} PRIVATE ${FLAGS})
endforeach()
